--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=ANDREW-JJH_movies-api-gate
-sonar.organization=andrew-jjh
+sonar.projectKey=Andrew-JJH_movies-api-gate
+sonar.organization=Andrew-JJH
 sonar.sources=src
 sonar.tests=test
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
